Made silence detection trigger in 500ms (not 1.5sec) ,   placed microphone button below view-pager,   dimmer colors for chat out-of-session

--- a/android_search/res/values/strings.xml
+++ b/android_search/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="per_night">/night</string>
     <string name="trip_advisor_icon">Trip Advisor Icon</string>
     <string name="distance">Distance</string>
+    <string name="eva_icon">></string>
 </resources>
