1. added demo app project 2. Context settings 3. GUI while recording embedded in the main activity 4. Refactored SDK - allowing using Eva without extending base class and allow searching with voice without triggering voice activity.

--- a/EvaAPIs/res/values/strings.xml
+++ b/EvaAPIs/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="HOTELS">HOTELS</string>
     <string name="HOTEL">HOTEL</string>
     <string name="button_stop">Stop</string>
+    <string name="listening_">Listening...</string>
+    <string name="level">Level</string>
 </resources>
