fix for mismatch price,  initial support for children ages

--- a/android_search/res/values/strings.xml
+++ b/android_search/res/values/strings.xml
@@ -31,7 +31,7 @@ Check us out at\n
     <string name="HOTELS_MAP">MAP</string>
     <string name="HOTEL">HOTEL</string>
     <string name="button_stop">Stop</string>
-    <string name="people_per_room">People per room:</string>
+    <string name="people_per_room">Adults per room:</string>
     <string name="nothing_to_see_here_move_along">Nothing to see here - move along</string>
     <string name="EXAMPLES">EXAMPLES</string>
     <string name="hotel_image">Hotel Image</string>
@@ -73,4 +73,5 @@ Check us out at\n
 	<string name="star_rating">Star Rating</string>
 	<string name="faq">FAQ</string>
 	<string name="help">help</string>
+	<string name="children_per_room_">Children per room (3 max):</string>
 </resources>
