non refundable rooms visually distinguished,  small fixes

--- a/android_search/res/values/strings.xml
+++ b/android_search/res/values/strings.xml
@@ -67,7 +67,8 @@ Check us out at\n
         otherwise stated and exclude tax recovery charges and service fees. See 
         	<a href='http://www.travelnow.com/templates/352395/faq#9'>FAQs</a> for more details.</string>
     <string name="room_price_disclaimer_hotel_collect">
-        You are booking a non-discounted property. All rates displayed are nightly, and based on double occupancy per room 
+        This hotel can be booked online only.
+        This hotel is a non-discounted property. All rates displayed are nightly, and based on double occupancy per room 
         unless otherwise specified. Some rates may require special identification. Our booking  fee, taxes, and other surcharges 
         imposed by the hotel are not included. Any extra adults or children above the room\'s listed occupancy may be subject to 
         additional charges at the property\'s discretion.
