--- a/android_search/res/values/strings.xml
+++ b/android_search/res/values/strings.xml
@@ -67,4 +67,5 @@ Check us out at\n
 	
 	<string name="greeting">Hello, I am your hotel agent, you can tell me what you would like to find using voice.</string>
 	<string name="examples_greetings">You can try me by clicking on the microphone and saying any of these examples:</string>
+	<string name="checkout">Checkout</string>
 </resources>
