--- a/android_search/res/values/strings.xml
+++ b/android_search/res/values/strings.xml
@@ -64,5 +64,6 @@ Check us out at\n
     <string name="checkout">Checkout</string>
     <string name="title_activity_image_gallery">ImageGalleryActivity</string>
     <string name="show_fullscreen">Show Fullscreen</string>
+    <string name="no_rooms_available">No rooms available</string>
 
 </resources>
