--- a/android_search/res/values/strings.xml
+++ b/android_search/res/values/strings.xml
@@ -24,6 +24,7 @@ Check us out at\n
     <string name="HOTELS">HOTELS</string>
     <string name="HOTELS_MAP">MAP</string>
     <string name="HOTEL">HOTEL</string>
+    <string name="ROOMS">ROOMS</string>
     <string name="button_stop">Stop</string>
     <string name="people_per_room">Adults per room:</string>
     <string name="nothing_to_see_here_move_along">Nothing to see here - move along</string>
