--- a/android_search/res/values/strings.xml
+++ b/android_search/res/values/strings.xml
@@ -68,7 +68,6 @@
     <string name="checkout">Checkout</string>
     <string name="title_activity_image_gallery">ImageGalleryActivity</string>
     <string name="show_fullscreen">Show Fullscreen</string>
-    <string name="no_rooms_available">No rooms available</string>
     <string name="room_photo">Room Photo</string>
 
     <string name="arrival">Check in:</string>
@@ -127,4 +126,8 @@
     <string name="taxes_and_fees">Taxes &amp; Fees</string>
     <string name="choose_contact">Choose from contacts</string>
     <string name="adults_comma_children">%1$d Adult(s), %2$d Child(ren)</string>
+    <string name="select">Select</string>
+    <string name="sold_out">Sold Out</string>
+    <string name="no_hotels">No hotels available, please try searching for a different location or date</string>
+    <string name="children_ages_required">Children ages are required for searching hotels</string>
 </resources>
