--- a/android_search/res/values/strings.xml
+++ b/android_search/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="fatal_error">Fatal Error</string>
     <string name="microphone_button">Microphone button</string>
     <string name="chat_icon_description">chat icon</string>
-    <string name="network_error">Network Error - Sorry!</string>
+    <string name="network_error">This application requires internet connection in order to function - Sorry!</string>
     <string name="redirected">Couldn\'t connect to EAN API network.</string>
     <string name="error_tts_init">Could not initialize text-to-speech</string>
     <string name="CHAT">CHAT</string>
