Trip advisor rating+reviews,  higher res icon for map marker

--- a/android_search/res/values/strings.xml
+++ b/android_search/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="CHAT">CHAT</string>
     <string name="HOTELS">HOTELS</string>
     <string name="HOTEL">HOTEL</string>
+    <string name="REVIEWS">REVIEWS</string>
     <string name="ROOMS">ROOMS</string>
     <string name="BOOKING">BOOKING</string>
     <string name="RESERVATIONS">RESERVATIONS</string>
