--- a/android_search/res/values/strings.xml
+++ b/android_search/res/values/strings.xml
@@ -121,7 +121,7 @@
     <string name="hotel_address">Hotel Address</string>
     <string name="taxes_and_fees">Taxes &amp; Fees</string>
     <string name="choose_contact">Choose from contacts</string>
-    <string name="select">Select</string>
+    <string name="select">Select this Hotel</string>
     <string name="sold_out">Sold Out</string>
     <string name="no_hotels">No hotels available, please try searching for a different location or date</string>
     <string name="children_ages_required">Children ages are required for searching hotels</string>
