--- a/EvaSDK/evasdk/src/main/res/values/strings.xml
+++ b/EvaSDK/evasdk/src/main/res/values/strings.xml
@@ -6,8 +6,11 @@
     <!-- ********************************** Evature: Voice Search & Chat *********************************** -->
     <string name="evature_listening">Listening...</string>
     <string name="evature_user_start_new">Start new search</string>
+    <string name="evature_greeting_car">What car can can I find for you?</string>
     <string name="evature_greeting_cruise">What cruise can I find for you?</string>
     <string name="evature_greeting_flight">What flight can I find for you?</string>
+    <string name="evature_greeting_hotel">What hotel can I find for you?</string>
+    <string name="evature_greeting">Hello, how may I help you?</string>
     <string name="evature_start_new_session_speak">Starting a new search. How may I help you?</string>
     <string name="evature_examples_greetings">You can try me by tapping on the microphone and saying any of these examples:</string>
     <string name="evature_audio_control">Audio Control</string>
@@ -18,17 +21,41 @@
     <string name="evature_zero_count">Sorry, no matching results found.\nDrag the microphone button to the left to undo.</string>
     <string name="evature_network_error">There was an error contacting the server, please check your internet connection or try again later</string>
     <string name="evature_volume_">Volume:</string>
-    <string name="evature_examples_flights">  Fly from New York to Tokyo\n  Fly on Monday, return on Friday\n  Fly with United to London\n  Non stop flights, sorted by price\n  First class seats for two adults</string>
-    <string name="evature_examples_cruises">  Cruise to Alaska in August\n  10 days cruise departing from Miami\n  Princess Cruises\n  Cruises in July, sorted by price\n  Norwegian Jewel</string>
     <string name="evature_ok">OK</string>
-    <string name="evature_stop">Stop</string>    
-    <color name="evature_times_markup">#4CAF50</color>
-    <color name="evature_locations_markup">#03A9F4</color>
-    <color name="evature_chat_background">#DD000000</color>
-    <color name="evature_chat_text">#f5f5f5</color>
-    <color name="evature_chat_secondary_text">#d5d5df</color>
-    
-    
+    <string name="evature_stop">Stop</string>
+
+    <string-array name="evature_examples_flights">
+        <item>Fly from New York to Tokyo</item>
+        <item>Fly on Monday, return on Friday</item>
+        <item>Fly with United to London</item>
+        <item>Non stop flights, sorted by price</item>
+        <item>First class seats for two adults</item>
+        <item>Two Adults, one child</item>
+    </string-array>
+
+    <string-array name="evature_examples_cruises">
+        <item>Cruise to Alaska in August</item>
+        <item>10 days cruise departing from Miami</item>
+        <item>Princess Cruises</item>
+        <item>Cruises in July, sorted by price</item>
+        <item>Norwegian Jewel</item>
+    </string-array>
+
+    <string-array name="evature_examples_hotels">
+        <item>Hotel tonight</item>
+        <item>5 Star hotels, sorted by price</item>
+        <item>Hotel near the Eiffel Tower</item>
+        <item>Hotel with a pool</item>
+        <item>Hilton</item>
+    </string-array>
+
+    <string-array name="evature_examples_cars">
+        <item>Pick up car in JFK tomorrow on 10am</item>
+        <item>Return car in Time square next friday 11am</item>
+        <item>Rent a minivan</item>
+        <item>Avis car</item>
+    </string-array>
+
     <!--  for Lollipop vector animations -->
     <string name="evature_flat_microphone_bottom">
         m37.14123,239.43086l-0.14124,0.06943c0.14124,0.33484 64.84821,0.61557 152.39124,0.69519c1.83185,0.00052 3.66574,0.00256 5.35645,0.00461c8.31805,0.01022 14.23744,0.03522 17.05789,0.06534l0,0.29962c0,0.05563 12.54678,0.10056 28.19444,0.10056l0.14122,0c15.64764,0 28.05319,-0.04492 28.05319,-0.10056l0,-0.30014c2.81848,-0.03012 8.5986,-0.0546 16.91666,-0.06482c1.69077,-0.00204 3.52457,-0.00409 5.49774,-0.00458c87.54294,-0.07965 152.39117,-0.36038 152.39117,-0.69522l0,-0.06943c0,-0.05307 -12.54678,-0.09647 -27.49036,-0.09647c-14.94156,0 -27.48831,0.04288 -27.48831,0.09647l0,0.06943c0,0.14548 -16.21255,0.27615 -43.13797,0.37158c-27.06668,0.09494 -63.85974,0.15417 -105.0246,0.15417c-41.16293,0 -77.67545,-0.05872 -104.60089,-0.15417c-26.92543,-0.09543 -43.27921,-0.22662 -43.27921,-0.37158l0,-0.06943c0,-0.05307 -12.40555,-0.09647 -27.48835,-0.09647c-14.94353,0 -27.34908,0.0434 -27.34908,0.09647l0,0l0,0z
