--- a/EvaSDK/evasdk/src/main/res/values/strings.xml
+++ b/EvaSDK/evasdk/src/main/res/values/strings.xml
@@ -19,10 +19,11 @@
     <string name="evature_tap_for_examples">\nTap here to see some examples.</string>
     <string name="evature_undo_tutorial">Drag the microphone button to the left to undo the last utterance.</string>
     <string name="evature_zero_count">Sorry, no matching results found.\nDrag the microphone button to the left to undo.</string>
-    <string name="evature_network_error">There was an error contacting the server, please check your internet connection or try again later</string>
+    <string name="evature_network_error">There was an error contacting the server, please check your internet connection or try again later.</string>
     <string name="evature_volume_">Volume:</string>
     <string name="evature_ok">OK</string>
     <string name="evature_stop">Stop</string>
+    <string name="evature_thinking">Thinking...</string>
 
     <string-array name="evature_examples_flights">
         <item>Fly from New York to Tokyo</item>
